newtype-tools/tests/newtype-fail/union.stderr
error: expected `struct Newtype(inner_type)`
 --> tests/newtype-fail/union.rs:4:1
  |
4 | union U {
  | ^^^^^
